[gd_scene load_steps=12 format=2]

[ext_resource path="res://Characters/Enimes/DefaultScripts/DamagePlayer.gd" type="Script" id=1]
[ext_resource path="res://Characters/Enimes/Undead/RoofEnimes/RoofShooter/Shooter1.png" type="Texture" id=2]
[ext_resource path="res://Characters/Enimes/Undead/RoofEnimes/RoofShooter/Shooter2.png" type="Texture" id=3]
[ext_resource path="res://Characters/Enimes/Undead/RoofEnimes/RoofShooter/Shooter4.png" type="Texture" id=4]
[ext_resource path="res://Characters/Enimes/Undead/RoofEnimes/RoofShooter/Shooter3.png" type="Texture" id=5]
[ext_resource path="res://Characters/Enimes/Undead/RoofEnimes/RoofShooter/Shooter7.png" type="Texture" id=6]
[ext_resource path="res://Characters/Enimes/Undead/RoofEnimes/RoofShooter/RoofShooter.gd" type="Script" id=7]
[ext_resource path="res://Characters/Enimes/Undead/RoofEnimes/RoofShooter/Shooter5.png" type="Texture" id=8]
[ext_resource path="res://Characters/Enimes/Undead/RoofEnimes/RoofShooter/Shooter6.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 14.0

[sub_resource type="Animation" id=2]
resource_name = "Shooter"
length = 1.6
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "Shoot"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ) ]
}

[node name="RoofShooter" type="Node2D"]
z_index = 3
script = ExtResource( 7 )

[node name="Hitpoint" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitpoint"]
position = Vector2( 0, -10 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Shooter = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="Hitpoint" to="Hitpoint" method="_on_Hitpoint_body_entered"]
[connection signal="body_exited" from="Hitpoint" to="Hitpoint" method="_on_Hitpoint_body_exited"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
